--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,32 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
+
+  test-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Front-end test
+          command: |
+            cd frontend/
+            npm run test
+                
+  test-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Backend-end test
+          command: |
+            cd backend/
+            npm run test
             
 
 workflows:
@@ -73,3 +99,7 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
