--- a/frontend/package.json
+++ b/frontend/package.json
@@ -131,7 +131,7 @@
       "raf/polyfill"
     ],
     "testRegex": ".*(spec|test)\\.(ts|tsx|js)$",
-    "setupTestFrameworkScriptFile": "<rootDir>/setupTests.ts",
+    "setupFilesAfterEnv": "<rootDir>/setupTests.ts",
     "snapshotSerializers": [
       "enzyme-to-json"
     ],
