--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,6 @@ jobs:
           name: Front-end test
           command: |
             cd frontend/
-            npm audit fix
             npm run test
       - save_cache:
           paths: [frontend/node_modules]
@@ -95,7 +94,6 @@ jobs:
           name: Backend-end test
           command: |
             cd backend/
-            npm audit fix
             npm run test
       - save_cache:
           paths: [backend/node_modules]
@@ -112,7 +110,7 @@ jobs:
           name: Front-end Scan
           command: |
             cd frontend/
-            npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -131,7 +129,7 @@ jobs:
           name: Backend-end Scan
           command: |
             cd backend/
-            npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
