--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -15,7 +15,7 @@
 
 
     - name: "install python for Ansible."
-      raw: 'sudo apt-get -y install python'
+      raw: 'sudo apt-get -y install python3'
 
   roles:
     - configure-server
