--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -8,7 +8,7 @@
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
-    #Adding Env var
+    #Env var
     - ENVIRONMENT: "{{ lookup('env','ENVIRONMENT') }}"
     - TYPEORM_CONNECTION: "{{ lookup('env','TYPEORM_CONNECTION') }}"
     - TYPEORM_ENTITIES: "{{ lookup('env','TYPEORM_ENTITIES') }}"
