--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -238,11 +238,11 @@ jobs:
       - restore_cache:
           keys: [frontend-build]
       - aws-cli/setup
-      - run:
-          name: Install dependencies
-          command: |
-            yum install -y tar
-            yum install -y gzip
+      # - run:
+      #     name: Install dependencies
+      #     command: |
+      #       yum install -y tar
+      #       yum install -y gzip
       - run:
           name: Get backend url
           command: |
