--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -257,7 +257,7 @@ jobs:
           command: |
             cd frontend
             npm run build
-            aws s3 cp --recursive /.dist s3://udapeople-ysu8kuky5ec7nc49r/
+            aws s3 cp --recursive ./dist s3://udapeople-ysu8kuky5ec7nc49r/
       # Here's where you will add some code to rollback on failure 
             
 
