--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -275,7 +275,7 @@ jobs:
       - attach_workspace:
           at: ~/
       - restore_cache:
-          keys: [frontend-build]
+          keys: [backend-build]
       - run:
           name: Deploy backend
           command: |
