--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,11 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
-            # Your code here
-            exit 1
+            aws cloudformation delete-stack \
+              --stack-name "backend-ysu8kuky5ec7nc49r"
+            aws cloudformation delete-stack \
+              --stack-name "frontend-ysu8kuky5ec7nc49r"
+
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
@@ -181,6 +184,7 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
+      - destroy-environment
       # Here's where you will add some code to rollback on failure  
       
 
