--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -275,7 +275,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update jq ansible tar gzip curl
+            apk add --update jq ansible tar gzip curl nodejs npm
       - attach_workspace:
           at: ~/
       - restore_cache:
@@ -283,8 +283,12 @@ jobs:
       - run:
           name: Deploy backend
           command: |
-            ls -lthr ./backend
-            cat .circleci/ansible/inventory.txt
+            cd backend
+            cp -r /home/circleci/project/backend/node_modules/ node_modules/
+            npm rub build
+            cd /home/
+            tar czf backend.tar.gz -P ~/project/backend/dist/
+            ansible-playbook -i ~/project/.circleci/ansible/inventory.txt ~/project/.circleci/ansible/deploy-backend.yml
       # Here's where you will add some code to rollback on failure  
             
 
