--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -285,7 +285,7 @@ jobs:
           command: |
             cd backend
             cp -r /home/circleci/project/backend/node_modules/ node_modules/
-            npm rub build
+            npm run build
             cd /home/
             tar czf backend.tar.gz -P ~/project/backend/dist/
             ansible-playbook -i ~/project/.circleci/ansible/inventory.txt ~/project/.circleci/ansible/deploy-backend.yml
