--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -10,9 +10,9 @@
     cd /home/ubuntu/
     tar xzvf backend.tar.gz
     mv home/circleci/project/backend .
-    cd backend
+    cd backend/dist
     sudo npm install -g npm@latest
     sudo npm install -g webpack-dev-server
     sudo npm install
     sudo npm run build
-    sudo pm2 start npm --name backend -- start
+    sudo pm2 start main.js
