--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -286,6 +286,8 @@ jobs:
             cd backend
             cp -r /home/circleci/project/backend/node_modules/ node_modules/
             npm run build
+            cp -r node_modules/ dist/node_modules/
+            cp package.json dist
             cd /home/
             tar czf backend.tar.gz -P ~/project/backend/dist/
             ansible-playbook -i ~/project/.circleci/ansible/inventory.txt ~/project/.circleci/ansible/deploy-backend.yml
