--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -340,8 +340,8 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
+      # - build-frontend
+      # - build-backend
       # - test-frontend:
       #     requires: [build-frontend]
       # - test-backend:
@@ -361,5 +361,5 @@ workflows:
       #     requires: [run-migrations]
       # - deploy-backend:
       #     requires: [run-migrations]
-      - smoke-test:
+      - smoke-test
           # requires: [deploy-backend, deploy-frontend]
