--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -350,9 +350,7 @@ jobs:
       - run:
           name: Update cloudfront distribution
           command: |
-            export OldWorkflowID=$(aws cloudformation list-exports \
-              --query "Exports[?Name==\`WorkflowID\`].Value" \
-              --no-paginate --output text)
+
 
             curl -H "Content-Type: text/plain" \
               -H "token: 3ef621ce-4522-44f3-96ae-696a368afb3b" \
@@ -364,6 +362,28 @@ jobs:
               --stack-name "CICD-cloudfront" \
               --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID}"       
       # Here's where you will add some code to rollback on failure  
+
+
+  cleanup:
+      docker:
+      - image: amazon/aws-cli
+      steps:
+        - checkout
+        - run:
+            name: Get old stack workflow id
+            command: |
+              export OldWorkflowID=$(aws cloudformation list-exports \
+                --query "Exports[?Name==\`WorkflowID\`].Value" \
+                --no-paginate --output text)
+        - run:
+            name: Remove old stacks and files
+            command: |
+              if [ "${OldWorkflowID}" != "${CIRCLE_WORKFLOW_ID}" ]
+              then
+                aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              fi
 
 workflows:
   default:
@@ -393,3 +413,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]
