--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -346,7 +346,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update curl
+            yum install -y curl
       - run:
           name: Update cloudfront distribution
           command: |
@@ -362,6 +362,8 @@ jobs:
               --stack-name "CICD-cloudfront" \
               --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID}"       
       # Here's where you will add some code to rollback on failure  
+      - revert-migrations
+      - destroy-environment
 
 
   cleanup:
