fixed cloudfront update

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -350,12 +350,9 @@ jobs:
       - run:
           name: Update cloudfront distribution
           command: |
-
-
             curl -H "Content-Type: text/plain" \
               -H "token: 3ef621ce-4522-44f3-96ae-696a368afb3b" \
-              --request PUT --data $OldWorkflowID \
-              https://api.memstash.io/values/old_workflow_id_${CIRCLE_WORKFLOW_ID}
+              --request PUT --data $OldWorkflowID https://api.memstash.io/values/old_workflow_id_${CIRCLE_WORKFLOW_ID}
               
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
