--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -376,8 +376,8 @@ jobs:
               if [ "${OldWorkflowID}" != "${CIRCLE_WORKFLOW_ID}" ]
               then
                 aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-                aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+                aws cloudformation delete-stack --stack-name "backend-${OldWorkflowID}"
+                aws cloudformation delete-stack --stack-name "frontend-${OldWorkflowID}"
               fi
 
 workflows:
