--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -364,18 +364,25 @@ jobs:
       - image: amazon/aws-cli
       steps:
         - checkout
-        - run:
-            name: Get old stack workflow id
-            command: |
-              export OldWorkflowID=$(aws cloudformation list-exports \
-                --query "Exports[?Name==\`WorkflowID\`].Value" \
-                --no-paginate --output text)
+        # - run:
+        #     name: Get old stack workflow id
+        #     command: |
+        #       export OldWorkflowID=$(aws cloudformation list-exports \
+        #         --query "Exports[?Name==\`WorkflowID\`].Value" \
+        #         --no-paginate --output text)
         - run:
             name: Remove old stacks and files
             command: |
+              export OldWorkflowID=$(aws cloudformation list-exports \
+                --query "Exports[?Name==\`WorkflowID\`].Value" \
+                --no-paginate --output text)            
+
+              echo Old workflow ID: "${OldWorkflowID}"
+
+
               if [ "${OldWorkflowID}" != "${CIRCLE_WORKFLOW_ID}" ]
               then
-                aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                aws s3 rm "s3://udapeople-${OldWorkflowID}/" --recursive
                 aws cloudformation delete-stack --stack-name "backend-${OldWorkflowID}"
                 aws cloudformation delete-stack --stack-name "frontend-${OldWorkflowID}"
               fi
